# peakflow

./: .env.example  .gitignore  MEMORY.md  README.md  pyproject.toml  requirements.txt
data/references/: manifest.json
frontend/: QUICKSTART.md  README.md  TESTING.md  index-react.html  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/api/: client.ts  hooks.ts  types.ts
frontend/src/components/common/: Badge.tsx  Button.tsx  Card.tsx  Spinner.tsx
frontend/src/components/landing/: LandingPage.tsx
frontend/src/components/layout/: AppLayout.tsx  Header.tsx
frontend/src/components/processing/: ProcessingOverlay.tsx
frontend/src/data/: demoResult.ts
frontend/src/store/: useResultsStore.ts  useUploadStore.ts
frontend/src/styles/: index.css
frontend/src/utils/: constants.ts  formatters.ts  validation.ts
scripts/: batch_process.py  coverage_report.py  download_highlights.py  extract_clips.py  generate_test_clips.py  process_reference.py  relabel_manifest.py
src/peakflow/: __init__.py  config.py
src/peakflow/api/: __init__.py  dependencies.py  main.py  routes.py
src/peakflow/core/: __init__.py
src/peakflow/feedback/: __init__.py
src/peakflow/models/: __init__.py  enums.py  schemas.py
src/peakflow/pipeline/: __init__.py  orchestrator.py  stage1_gating.py  stage2_context.py  stage3_pose.py  stage4_matching.py  stage5_dtw.py  stage6_feedback.py
src/peakflow/reference/: __init__.py  ingestion.py
tests/: __init__.py  conftest.py  test_dtw.py  test_gating.py  test_pose.py
(+11 files in other folders)
